fix check pass -_-
